--- a/Icon/flaticon.css
+++ b/Icon/flaticon.css
@@ -2,35 +2,51 @@
   	Flaticon icon font: Flaticon
   	Creation date: 15/04/2020 03:31
   	*/
+	@font-face {
+	  font-family: "Flaticon";
+	  src: url("./Flaticon.eot");
+	  src: url("./Flaticon.eot?#iefix") format("embedded-opentype"),
+	    url("./Flaticon.woff2") format("woff2"),
+	    url("./Flaticon.woff") format("woff"),
+	    url("./Flaticon.ttf") format("truetype"),
+	    url("./Flaticon.svg#Flaticon") format("svg");
+	  font-weight: normal;
+	  font-style: normal;
+	}
 
-@font-face {
-  font-family: "Flaticon";
-  src: url("./Flaticon.eot");
-  src: url("./Flaticon.eot?#iefix") format("embedded-opentype"),
-       url("./Flaticon.woff2") format("woff2"),
-       url("./Flaticon.woff") format("woff"),
-       url("./Flaticon.ttf") format("truetype"),
-       url("./Flaticon.svg#Flaticon") format("svg");
-  font-weight: normal;
-  font-style: normal;
-}
+	@media screen and (-webkit-min-device-pixel-ratio:0) {
+	  @font-face {
+	    font-family: "Flaticon";
+	    src: url("./Flaticon.svg#Flaticon") format("svg");
+	  }
+	}
 
-@media screen and (-webkit-min-device-pixel-ratio:0) {
-  @font-face {
-    font-family: "Flaticon";
-    src: url("./Flaticon.svg#Flaticon") format("svg");
-  }
-}
+	[class^="flaticon-"]:before, [class*=" flaticon-"]:before,
+	[class^="flaticon-"]:after, [class*=" flaticon-"]:after {
+	  font-family: Flaticon;
+	  font-style: normal;
+	}
 
-[class^="flaticon-"]:before, [class*=" flaticon-"]:before,
-[class^="flaticon-"]:after, [class*=" flaticon-"]:after {
-  font-family: Flaticon;
-font-style: normal;
-}
+	.flaticon-microcontroller:before {
+	  content: "\f100";
+	}
 
-.flaticon-microcontroller:before { content: "\f100"; }
-.flaticon-code:before { content: "\f101"; }
-.flaticon-java:before { content: "\f102"; }
-.flaticon-python-file:before { content: "\f103"; }
-.flaticon-water-pump:before { content: "\f104"; }
-.flaticon-machinery:before { content: "\f105"; }
+	.flaticon-code:before {
+	  content: "\f101";
+	}
+
+	.flaticon-java:before {
+	  content: "\f102";
+	}
+
+	.flaticon-python-file:before {
+	  content: "\f103";
+	}
+
+	.flaticon-water-pump:before {
+	  content: "\f104";
+	}
+
+	.flaticon-machinery:before {
+	  content: "\f105";
+	}
