--- a/style.css
+++ b/style.css
@@ -7,6 +7,9 @@
   src: url(Light.otf) format("opentype");
 }
 
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Poppins:wght@400;500;600;700;800;900&family=Vollkorn&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu&display=swap');
+
 /* ===================================================================
    * fonts.scss)
    *
@@ -52,20 +55,25 @@
   font-weight: normal;
 }
 
-#myDiv {
+/* #myDiv {
   display: none;
   text-align: center;
+} */
+/* html {
+  scroll-behavior: smooth;
+} */
+body {
+  overflow-y: hidden;
+  height: 100vh;
+}
+
+html {
+  scroll-behavior: smooth;
 }
 
 .navbar {
-  min-height: 8vh;
   background-color: #2b4162;
   background-image: linear-gradient(315deg, #061A2A 0%, #12100e 45%);
-}
-
-.col {
-  color: #fffcf0;
-  font-family: librebaskerville-regular;
 }
 
 .navbar-toggler:focus, .navbar-toggler:active {
@@ -94,9 +102,10 @@
 }
 
 .nav-item {
-  font-family: Bold;
+  font-family: 'Poppins', sans-serif;
   color: #fffcf0;
-  font-size: 1.2rem;
+  font-weight: 600;
+  font-size: 16px;
 }
 
 .image_set {
@@ -104,10 +113,10 @@
 }
 
 .intro {
-  height: 92vh;
+  height: 100vh;
   min-height: 670px;
-  background-color: #2b4162;
-  background-image: linear-gradient(315deg, #061A2A 0%, #12100e 65%);
+  background-color: #061A2A;
+  background-image: linear-gradient(315deg, #061A2A 0%, #12100e 60%);
 }
 
 .badge {
@@ -150,12 +159,21 @@
   height: 120vh;
 }
 
-.about {
+.about-section .h6 {
   font-family: "librebaskerville-bold", serif;
-  font-size: 1.6rem;
   line-height: 1.8;
   color: #2e383f;
-  margin-bottom: 10vh;
+  font-size: 18px;
+}
+
+.name-heading {
+  font-family: "librebaskerville-bold", serif;
+  line-height: 1.8;
+  color: #2e383f;
+}
+
+.about-highlight-text {
+  color: #4863A0;
 }
 
 #about_me {
@@ -175,7 +193,7 @@
 .line_about {
   width: 3.5px;
   height: 100px;
-  background-color: #9fa197;
+  background-color: #7e8894;
   margin: 4.5px;
   border: none;
 }
@@ -183,20 +201,12 @@
 #spinner-wrapper {
   position: fixed;
   top: 0;
-  background-color: #7f5a83;
-  background-image: linear-gradient(315deg, #7f5a83 0%, #0d324d 74%);
   left: 0;
   right: 0;
   bottom: 0;
+  background-color: #7f5a83;
+  background-image: linear-gradient(315deg, #7f5a83 0%, #0d324d 74%);
   z-index: 999999;
-}
-
-.spinner {
-  width: 40px;
-  height: 40px;
-  position: relative;
-  top: 45%;
-  left: 48%;
 }
 
 .cube1, .cube2 {
@@ -307,6 +317,7 @@ i {
 footer {
   background-color: #4c4177;
   background-image: linear-gradient(315deg, #4c4177 0%, #2a5470 74%);
+  color: white;
   /* background-color: #28313b; */
 }
 
@@ -352,7 +363,7 @@ footer p {
   background-color: #28313b;
 }
 
-.projects .h2 {
+.projects .h1 {
   color: #11537a;
   font-family: montserrat-regular;
 }
@@ -363,11 +374,27 @@ footer p {
   background-color: #7e8894;
 }
 
+.heading-line {
+  width: 100%;
+  height: 0.8px;
+  background-color: #7e8894;
+}
+
 #slash {
   color: #12100e;
 }
 
-.skills .h2 {
+.skills .h1 {
+  color: #11537a;
+  font-family: montserrat-regular;
+}
+
+.about-section .h1 {
+  color: #11537a;
+  font-family: montserrat-regular;
+}
+
+.hobbies .h1 {
   color: #11537a;
   font-family: montserrat-regular;
 }
@@ -405,12 +432,59 @@ footer p {
   background-image: linear-gradient(315deg, #fc9842 0%, #fe5f75 78%);
 }
 
-.chandra {
-  margin-top: -200px;
-  margin-bottom: -50px;
+.timeline_line {
+  width: 1px;
+  height: 100%;
+  background-color: black;
+  margin-left: 30px;
 }
 
-.backgroun img {
+.blink {
+  animation: blink 0.8s infinite;
+}
+
+@keyframes blink {
+  to {
+    opacity: .0;
+  }
+}
+
+.intro {
+  letter-spacing: 2px;
+}
+
+.landing-text>p {
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 400;
+  font-size: 2.5rem;
+  color: #fffcf0;
+}
+
+.hello-welcome {
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 400;
+  font-size: 1.2rem;
+  color: #fffcf0;
+}
+
+.landing-text>.header-sub-title {
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 700;
+  font-size: 2.5rem;
+  color: #fffcf0;
+}
+
+.social-icons {
+  font-size: 20px;
+}
+
+/* .header-sub-title {
+  color: #fff;
+  font-family: "Courier";
+  font-size: 20px;
+  padding: 0.1em;
+} */
+/* .backgroun img {
   display: block;
 }
 
@@ -418,16 +492,239 @@ footer p {
   display: block;
 }
 
-.surya {
+/* .surya {
   margin-bottom: -100px;
   margin-top: -100px;
-}
-
-.backgroun .surya-2 img {
-  display: block;
 }
 
 .surya-2 {
   margin-top: -100px;
   margin-bottom: -100px;
+}
+
+.chandra {
+  margin-top: -200px;
+  margin-bottom: -50px;
+} */
+/* .backgroun .surya-2 img {
+  display: block;
+} */
+.icon-scroll,
+.icon-scroll:before {
+  position: absolute;
+  left: 50%;
+}
+
+.icon-scroll {
+  width: 20px;
+  height: 50px;
+  margin-left: -20px;
+  bottom: 7%;
+  margin-top: -35px;
+  box-shadow: inset 0 0 0 1px #fff;
+  border-radius: 15px;
+}
+
+.icon-scroll:before {
+  content: '';
+  width: 8px;
+  height: 8px;
+  background: #7fffd4;
+  margin-left: -4px;
+  top: 8px;
+  border-radius: 4px;
+  animation-duration: 1.5s;
+  animation-iteration-count: infinite;
+  animation-name: scroll;
+}
+
+@-moz-keyframes scroll {
+  0% {
+    opacity: 1;
+  }
+
+  100% {
+    opacity: 0;
+    transform: translateY(27px);
+  }
+}
+
+@-webkit-keyframes scroll {
+  0% {
+    opacity: 1;
+  }
+
+  100% {
+    opacity: 0;
+    transform: translateY(27px);
+  }
+}
+
+@-o-keyframes scroll {
+  0% {
+    opacity: 1;
+  }
+
+  100% {
+    opacity: 0;
+    transform: translateY(27px);
+  }
+}
+
+@keyframes scroll {
+  0% {
+    opacity: 1;
+  }
+
+  100% {
+    opacity: 0;
+    transform: translateY(27px);
+  }
+}
+
+#projects {
+  padding-top: 59px;
+}
+
+#skills {
+  padding-top: 59px;
+}
+
+#about {
+  padding-top: 50px;
+}
+
+#hobbies {
+  padding-top: 50px;
+}
+
+#hobby-text {
+  color: #11537a;
+  font-family: montserrat-regular;
+}
+
+/* .water {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: url(wave.png);
+  background-size: 1000px 25px;
+} */
+/* .intro::after {
+  content: "";
+  position: absolute;
+  bottom: -40px;
+  left: 0;
+  z-index: 1;
+  width: 100%;
+  height: 100px;
+  background: transparent;
+  background-size: 100% 100%;
+  background-image: url(wave.png);
+} */
+/*
+.water1 {
+  animation: animatewater 25s linear infinite;
+  z-index: 1000;
+  opacity: 3;
+  animation-delay: 0s;
+  bottom: 0;
+}
+
+.water2 {
+  animation: animatewater2 15s linear infinite;
+  z-index: 999;
+  opacity: 0.5;
+  animation-delay: -5s;
+  bottom: 2px;
+}
+
+.water3 {
+  animation: animatewater 20s linear infinite;
+  z-index: 998;
+  opacity: 0.3;
+  animation-delay: -2s;
+  bottom: 5px;
+}
+
+.water2 {
+  animation: animatewater2 5s linear infinite;
+  z-index: 997;
+  opacity: 0.7;
+  animation-delay: -5s;
+  bottom: 7px;
+}
+
+@keyframes animatewater {
+  0% {
+    background-position-x: 0;
+  }
+
+  100% {
+    background-position-x: 1000px;
+  }
+}
+
+@keyframes animatewater2 {
+  0% {
+    background-position-x: 0;
+  }
+
+  100% {
+    background-position-x: 1000px;
+  }
+} */
+#blob {
+  height: 19px;
+  width: 19px;
+  /* background-color: #2A5470; */
+  /* background-color: #1E3B70; */
+  background-color: #29539B;
+  border-radius: 50%;
+  text-align: center;
+  vertical-align: middle;
+  line-height: 19px;
+  box-shadow: 0 0 0 0 rgb(41, 83, 155);
+  animation: pulse 2s infinite;
+}
+
+@keyframes pulse {
+  0% {
+    transform: scale(0.95);
+    box-shadow: 0 0 0 0 #7e96bf;
+  }
+
+  70% {
+    transform: scale(1);
+    box-shadow: 0 0 0 10px rgba(0, 0, 0, 0);
+  }
+
+  100% {
+    transform: scale(0.95);
+    box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
+  }
+}
+
+.fa-info {
+  color: #fff;
+}
+
+.navbar-nav>.nav-item::after {
+  content: '';
+  display: block;
+  width: 0;
+  height: 1px;
+  background: #fff;
+  transition: width .3s ease;
+}
+
+.navbar-nav>.nav-item:hover::after {
+  width: 100%;
+  transition: width .3s ease-out;
+}
+
+.navbar-nav>.active::after {
+  border-bottom: 1px solid white;
 }
